# tortugabot

./: .gitignore  README.md  rosinstall.yaml
cereal_port/: CMakeLists.txt  package.xml
find_boards/: CMakeLists.txt  find_boards.asd  package.xml
find_boards/src/: find-boards.lisp  package.lisp
laser_range_filter/: CMakeLists.txt  package.xml
laser_range_filter/scripts/: filter.py
navigate_map/: CMakeLists.txt  navigate-map.asd  package.xml
navigate_map/launch/: amcl.launch  amcl_laser.launch  amcl_laser_gazebo.launch  base_local_planner_params.yaml  costmap_common_params.yaml  gmapping.launch  local_costmap_params.yaml  markers.launch  move_base_laser.launch  nav_config.launch  save_map.launch
navigate_map/launch/param_laser/: costmap_common_params.yaml  local_costmap_params.yaml
navigate_map/maps/: finalmap1.pgm  finalmap1.yaml  finalmap2.pgm  finalmap2.xcf  map.pgm  map3_raw.yaml  map_1.pgm  map_1.yaml  map_original.pgm  mika_map_edit.pgm  mika_map_edit.yaml  quaterspeed.yaml  small_map1.pgm  small_map1.yaml  suturo_map.pgm  suturo_map.yaml
navigate_map/markers/: board1.yml  board2.yml  board3.yml  board4.yml  board5.yml  board6.yml  board7.yml  board8.yml  board9.yml  boards.yml  marker_map.yml
navigate_map/src/: package.lisp  simple-nav-goals.lisp
ricardobot/roboclaw_driver/: CMakeLists.txt
ricardobot/roboclaw_driver/launch/: roboclaw.launch
ricardobot/roboclaw_driver/src/: roboclaw_driver.cpp
ricardobot/tortugabot_bringup/: manifest.xml
ricardobot/tortugabot_bringup/launch/: 3dsensor.launch  ekf.launch
roboclaw_driver/: CMakeLists.txt  manifest.xml  package.xml
roboclaw_driver/launch/: roboclaw.launch  suturo_roboclaw.launch
roboclaw_driver/src/: roboclaw_driver.cpp
sound_play_lisp/: CMakeLists.txt  package.xml  sound-play-lisp.asd
sound_play_lisp/src/: guts.lisp  package.lisp
tortuga_description/: CMakeLists.txt  package.xml
tortuga_description/config/: tortuga_control.yaml
tortuga_description/launch/: display_tortuga.launch  launch_gazebo.launch  launch_gazebo_tmp.launch  upload_tortuga.launch
tortuga_description/meshes/: tortuga_base.dae  tortuga_front_wheel.dae  tortuga_front_wheel_hinge.dae  tortuga_motor.dae  tortuga_wheel.dae  tortuga_xtion.dae
tortuga_description/urdf/: tortuga_base.xacro  tortuga_description.gazebo.urdf.xacro  tortuga_description.urdf.xacro  tortuga_gazebo.xacro  tortuga_motors.xacro  tortuga_sensors.xacro  tortuga_wheels.xacro
tortugabot/tortugabot_bringup/launch/: joy_logitech.launch  minimal.launch
tortugabot_bringup/: CMakeLists.txt  package.xml
tortugabot_bringup/launch/: amcl.launch  amcl_ns.launch  base.launch  base_and_joy.launch  base_and_joy_and_laser.launch  frames.gv  gmapping.launch  joy_teleop.launch  keyboard_teleop.launch  laser.launch  laser_raw.launch  minimal.launch  minimal_laser.launch  move_base.launch  roboclaw_node.launch  suturo_gmapping.launch  turtle_bringup.launch
tortugabot_bringup/launch/move_base_params/: costmap_common_params.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
tortugabot_bringup/maps/: tab-1floor.yaml
travel_hall/: CMakeLists.txt  package.xml  travel_hall.asd
travel_hall/src/: package.lisp  travel_hall.fasl  travel_hall.lisp
turtlebot_teleop/: manifest.xml
turtlebot_teleop/launch/: ps3_teleop.launch
turtlebot_teleop/src/: turtlebot_joy.cpp
