<?xml version="1.0"?>
<package>
  <name>find_boards</name>
  <version>0.0.0</version>
  <description>The navigate_map package</description>

  <maintainer email="kazhoyan@cs.uni-bremen.de">Gayane Kazhoyan</maintainer>
  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/navigate_map</url> -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>move_base</build_depend>
  <build_depend>roboclaw_driver</build_depend>
  <build_depend>tortugabot_bringup</build_depend>
  <run_depend>move_base</run_depend>
  <run_depend>roboclaw_driver</run_depend>
  <run_depend>tortugabot_bringup</run_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>roslisp</build_depend>
  <build_depend>cl_tf</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>roslisp</run_depend>
  <run_depend>cl_tf</run_depend>
</package>
