<package format="2">
  <name>roboclaw_driver</name>
  <version>0.0.0</version>
  <description>Driver for the RoboClaw motor controllers </description>
  <author>Ricardo Garro</author>
  <author>Alexis Maldonado</author>
  <maintainer email="amaldo@cs.uni-bremen.de">Alexis Maldonado</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>cereal_port</depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>nav_msgs</depend>
</package>


