<?xml version="1.0"?>
<package>
  <name>sound_play_lisp</name>
  <version>0.0.0</version>
  <description>The sound_play_lisp package</description>

  <maintainer email="kazhoyan@cs.uni-bremen.de">Gayane Kazhoyan</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslisp</build_depend>
  <build_depend>sound_play</build_depend>
  <build_depend>actionlib_lisp</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>roslisp</run_depend>
  <run_depend>sound_play</run_depend>
  <run_depend>actionlib_lisp</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
