<?xml version="1.0"?>
<package>
  <name>tortuga_description</name>
  <version>0.0.0</version>
  <description>The tortuga_description package contains a urdf description of the tortuga-bot</description>

  <maintainer email="bbrieber@cs.uni-bremen.de">Benjamin Brieber</maintainer>
  <author email="bbrieber@cs.uni-bremen.de">Benjamin Brieber</author>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>